// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`typeConfigs should provide type configs 1`] = `
Array [
  Object {
    "component": [Function],
    "description": " ** Unsupported ** ",
    "name": "Missing",
    "type": "missing",
  },
  Object {
    "component": [Function],
    "description": "Send the contact a message",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "text",
      "quick_replies",
    ],
    "name": "Send Message",
    "type": "send_msg",
  },
  Object {
    "component": [Function],
    "description": "Send somebody else a message",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "text",
    ],
    "name": "Send Broadcast",
    "type": "send_broadcast",
  },
  Object {
    "component": [Function],
    "description": "Label the incoming message",
    "form": [Function],
    "name": "Add Labels",
    "type": "add_input_labels",
  },
  Object {
    "component": [Function],
    "description": "Add the contact to a group",
    "form": [Function],
    "name": "Add to Group",
    "type": "add_contact_groups",
  },
  Object {
    "component": [Function],
    "description": "Remove the contact from a group",
    "form": [Function],
    "name": "Remove from Group",
    "type": "remove_contact_groups",
  },
  Object {
    "aliases": Array [
      "set_contact_name",
      "set_contact_language",
      "set_contact_channel",
    ],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  Object {
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "name": "Send Email",
    "type": "send_email",
  },
  Object {
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "name": "Save Flow Result",
    "type": "set_run_result",
  },
  Object {
    "aliases": Array [
      "split_by_webhook",
    ],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  Object {
    "aliases": Array [
      "split_by_subflow",
    ],
    "component": [Function],
    "description": "Enter another flow",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Start a Flow",
    "type": "start_flow",
  },
  Object {
    "component": [Function],
    "description": "Start somebody else in a flow",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Start Somebody Else",
    "type": "start_session",
  },
  Object {
    "description": "Split by a custom expression",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
      "cases",
    ],
    "name": "Split by Expression",
    "type": "split_by_expression",
  },
  Object {
    "description": "Split by group membership",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Split by Group Membership",
    "type": "split_by_groups",
  },
  Object {
    "aliases": Array [
      "switch",
    ],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
      "cases",
    ],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
]
`;

exports[`typeConfigs should provide type configs 2`] = `
Object {
  "add_contact_groups": Object {
    "component": [Function],
    "description": "Add the contact to a group",
    "form": [Function],
    "name": "Add to Group",
    "type": "add_contact_groups",
  },
  "add_input_labels": Object {
    "component": [Function],
    "description": "Label the incoming message",
    "form": [Function],
    "name": "Add Labels",
    "type": "add_input_labels",
  },
  "call_webhook": Object {
    "aliases": Array [
      "split_by_webhook",
    ],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  "missing": Object {
    "component": [Function],
    "description": " ** Unsupported ** ",
    "name": "Missing",
    "type": "missing",
  },
  "remove_contact_groups": Object {
    "component": [Function],
    "description": "Remove the contact from a group",
    "form": [Function],
    "name": "Remove from Group",
    "type": "remove_contact_groups",
  },
  "send_broadcast": Object {
    "component": [Function],
    "description": "Send somebody else a message",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "text",
    ],
    "name": "Send Broadcast",
    "type": "send_broadcast",
  },
  "send_email": Object {
    "component": [Function],
    "description": "Send an email",
    "form": [Function],
    "name": "Send Email",
    "type": "send_email",
  },
  "send_msg": Object {
    "component": [Function],
    "description": "Send the contact a message",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "text",
      "quick_replies",
    ],
    "name": "Send Message",
    "type": "send_msg",
  },
  "set_contact_channel": Object {
    "aliases": Array [
      "set_contact_name",
      "set_contact_language",
      "set_contact_channel",
    ],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  "set_contact_field": Object {
    "aliases": Array [
      "set_contact_name",
      "set_contact_language",
      "set_contact_channel",
    ],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  "set_contact_language": Object {
    "aliases": Array [
      "set_contact_name",
      "set_contact_language",
      "set_contact_channel",
    ],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  "set_contact_name": Object {
    "aliases": Array [
      "set_contact_name",
      "set_contact_language",
      "set_contact_channel",
    ],
    "component": [Function],
    "description": "Update the contact",
    "form": [Function],
    "name": "Update Contact",
    "type": "set_contact_field",
  },
  "set_run_result": Object {
    "component": [Function],
    "description": "Save a result for this flow",
    "form": [Function],
    "name": "Save Flow Result",
    "type": "set_run_result",
  },
  "split_by_expression": Object {
    "description": "Split by a custom expression",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
      "cases",
    ],
    "name": "Split by Expression",
    "type": "split_by_expression",
  },
  "split_by_groups": Object {
    "description": "Split by group membership",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Split by Group Membership",
    "type": "split_by_groups",
  },
  "split_by_subflow": Object {
    "aliases": Array [
      "split_by_subflow",
    ],
    "component": [Function],
    "description": "Enter another flow",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Start a Flow",
    "type": "start_flow",
  },
  "split_by_webhook": Object {
    "aliases": Array [
      "split_by_webhook",
    ],
    "component": [Function],
    "description": "Call a webook",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Call Webhook",
    "type": "call_webhook",
  },
  "start_flow": Object {
    "aliases": Array [
      "split_by_subflow",
    ],
    "component": [Function],
    "description": "Enter another flow",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Start a Flow",
    "type": "start_flow",
  },
  "start_session": Object {
    "component": [Function],
    "description": "Start somebody else in a flow",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
    ],
    "name": "Start Somebody Else",
    "type": "start_session",
  },
  "switch": Object {
    "aliases": Array [
      "switch",
    ],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
      "cases",
    ],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
  "wait_for_response": Object {
    "aliases": Array [
      "switch",
    ],
    "description": "Wait for the contact to respond",
    "form": [Function],
    "localization": [Function],
    "localizeableKeys": Array [
      "exits",
      "cases",
    ],
    "name": "Wait for Response",
    "type": "wait_for_response",
  },
}
`;
